[MT-4646] Auto-hide arrow when Popover is shifted to prevent overflowing the editor

--- a/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
+++ b/packages/slate-editor/src/components/EditorBlock/EditorBlock.module.scss
@@ -74,6 +74,8 @@
     }
 
     &.hidden {
-        display: none;
+        &::before {
+            visibility: hidden;
+        }
     }
 }
